@@ -1,3 +1,6 @@
+* 17-Jan-2012: version 0.2.6:
+    - SqlStatementFactory now uses Ddth_EhProperties_EhProperties instead of Ddth_Commons_Properties
+
 * 12-Sep-2011: version 0.2.5:
     - Added function getNumAffectedRows($conn) to class SqlStatement
 
